--- a/src/style/_style.scss
+++ b/src/style/_style.scss
@@ -314,7 +314,7 @@ a:hover {
     }
 
     main {
-        grid-template-rows: 1fr 4fr;
+        grid-template-rows: 1fr 5fr;
     }
 
     .skill {
@@ -362,9 +362,10 @@ a:hover {
     }
 }
 
-@media (max-width: 700px) {
+@media (max-width: 750px) {
     main {
         grid-template-rows: 1fr 6fr;
+        grid-template-columns: 1.3fr 2fr;
     }
 }
 
